--- a/SpringDataQueryAnnotation_2/src/main/resources/application.properties
+++ b/SpringDataQueryAnnotation_2/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/springbootdb
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
@@ -9,3 +9,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
+server.port=8080
